c_library/build/tmp/compileReleaseLinuxCpp/output.txt
See file:///media/sf_Software_Engineering_Concepts/Assignment2/c_library/build/tmp/compileReleaseLinuxCpp/output.txt for all output for compileReleaseLinuxCpp.
compiling progress.cpp failed.
/media/sf_Software_Engineering_Concepts/Assignment2/c_library/src/main/cpp/CLibrary/progress.cpp:3:5: error: ‘JNIEXPORT’ does not name a type
     JNIEXPORT double JNICALL Java_NativePackage_NativeDeclaration_progress(JNIEnv *env, jclass cls, jdouble x, jdouble val)
     ^~~~~~~~~

Finished compileReleaseLinuxCpp, see full log file:///media/sf_Software_Engineering_Concepts/Assignment2/c_library/build/tmp/compileReleaseLinuxCpp/output.txt.
